2002-08-20  Marius Vollmer  <mvo@zagadka.ping.de>

	* print.c (scm_iprin1): Print primitives generics always as
	"primitive-generic" even when they have no primitive methods yet.

2002-08-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ports.c (scm_add_to_port_table): small bugfix.

	* mallocs.c (scm_malloc_obj): use scm_gc_malloc in stead of
	malloc.

	* gc-segment.c (scm_i_get_new_heap_segment): remove cluster cruft:
	only use SCM_MIN_HEAP_SEG_SIZE.

	* ports.c (scm_add_to_port_table): add backwards compatibility
	function

	* ports.h: use scm_i_ prefix for port table and port table size.
	
2002-08-15  Mikael Djurfeldt  <mdj@linnaeus>

	* vports.c (scm_make_soft_port): Initialize pt variable.

2002-08-13  Marius Vollmer  <mvo@zagadka.ping.de>

	* strports.h (scm_c_eval_string_in_module,
	scm_eval_string_in_module): New prototypes.
	* strports.c (scm_eval_string_in_module): New, but use
	"eval-string" as the Scheme name and make second parameter
	optional.
	(scm_eval_string): Implement using scm_eval_string_in_module.
	(scm_c_eval_string_in_module): New.
	Thanks to Ralf Mattes for the suggestion!
	
2002-08-09  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* gc-card.c ("sweep_card"): remove SCM_MISC_ERROR messages: print
	message and abort.
	
	* gc-mark.c ("scm_gc_mark_dependencies"): idem.

	* ports.c ("scm_new_port_table_entry"): return a boxed SCM in
	stead of scm_t_port*. The function now takes a tag argument.

2002-08-08  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* gc.h: add scm_debug_cells_gc_interval to public interface

	* gc-card.c ("sweep_card"): set scm_gc_running while sweeping.

	* gc.c (scm_i_expensive_validation_check): separate expensive
	validation checks from cheap ones.

2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* read.c (scm_input_error): new function: give meaningful error
	messages, and throw read-error

	* gc-malloc.c (scm_calloc): add scm_calloc.

2002-08-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
