@@ -283,7 +283,7 @@ SCM scm_structs_to_free;
 
 /* GC Statistics Keeping
  */
-long scm_cells_allocated = 0;
+unsigned long scm_cells_allocated = 0;
 unsigned long scm_mallocated = 0;
 unsigned long scm_gc_cells_collected;
 unsigned long scm_gc_cells_collected_1 = 0; /* previous GC yield */
@@ -337,7 +337,7 @@ SCM_DEFINE (scm_gc_stats, "gc-stats", 0, 0, 0,
   unsigned long int local_scm_heap_size;
   int local_scm_gc_cell_yield_percentage;
   int local_scm_gc_malloc_yield_percentage;
-  long int local_scm_cells_allocated;
+  unsigned long int local_scm_cells_allocated;
   unsigned long int local_scm_gc_time_taken;
   unsigned long int local_scm_gc_times;
   unsigned long int local_scm_gc_mark_time_taken;
@@ -392,7 +392,7 @@ SCM_DEFINE (scm_gc_stats, "gc-stats", 0, 0, 0,
     }
   
   answer = scm_list_n (scm_cons (sym_gc_time_taken, scm_ulong2num (local_scm_gc_time_taken)),
-		       scm_cons (sym_cells_allocated, scm_long2num (local_scm_cells_allocated)),
+		       scm_cons (sym_cells_allocated, scm_ulong2num (local_scm_cells_allocated)),
 		       scm_cons (sym_heap_size, scm_ulong2num (local_scm_heap_size)),
 		       scm_cons (sym_mallocated, scm_ulong2num (local_scm_mallocated)),
 		       scm_cons (sym_mtrigger, scm_ulong2num (local_scm_mtrigger)),
